# ticketing

./: .env.example  CHANGELOG.md  Dockerfile  LICENSE  README.md  alembic.ini  docker-compose.yml  pyproject.toml
.github/: settings.yml
alembic/: env.py
app/: main.py
app/api/routes/: users.py
app/auth/api/routes/: auth.py
app/auth/core/: security.py
app/auth/managers/: auth_manager.py
app/auth/schemas/: auth_schema.py
app/auth/services/: auth_service.py
app/config/: config.py  redis.py
app/db/: session.py
app/db/models/: __init__.py  event.py  payment.py  seat.py  ticket.py  user.py
app/managers/: base_manager.py  ticket_manager.py  user_manager.py
app/schemas/: base.py  event.py  payment.py  seat.py  ticket.py  user.py
app/services/: base_service.py  event_service.py  payment_service.py  seat_service.py  ticket_service.py  user_service.py
tests/: test_users.py
